[package]
name = "inn_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
log = "0.4.17"
reqwasm = "0.5.0"
serde = "1.0.137"
serde_json = "1.0.81"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
yew = "0.19.3"
yew-agent = "0.1.0"
yew-router = "0.16.0"
