[package]
name = "inn_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inn-network = {path = "../inn-network"}
inn-common = {path = "../inn-common"}
actix = "0.13.0"
actix-rt = "2.0.0"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.13.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.8"
clap = { version = "3.0", features = ["derive"] }