[package]
name = "inn-common"
description = "A common library for Inn"
documentation = "https://docs.rs/inn"
repository = "https://github.com/black-mongo/inn"
homepage = "https://github.com/black-mongo/inn"
keywords = ["inn", "fiddler", "charles", "whistle"]
categories = ["network-programming"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Cam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
rcgen = { version = "0.9", features = ["x509-parser"] }
rustls-pemfile = "0.3"
rustls = "0.20"
time = "0.3"
moka = {version = "0.8.4", features = ["future"]}
http = "0.2.7"
pem = "1.0.2"
