[package]
name = "inn-network"
description = "A network library for Inn"
documentation = "https://docs.rs/inn"
repository = "https://github.com/black-mongo/inn"
homepage = "https://github.com/black-mongo/inn"
keywords = ["inn", "fiddler", "charles", "whistle"]
categories = ["network-programming",
"web-programming::http-server"]
readme = "README.md"
license = "MIT"
version = "0.1.1"
edition = "2021"
authors = ["Cam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inn-common = "0.1" 
actix = "0.13.0"
actix-codec = "0.5"
actix-files = "0.6"
actix-web = "4"
actix-web-actors = "4.1"
actix-rt = "2.0.0"

byteorder = "1.2"
bytes = "1"
env_logger = "0.9"
futures-util = { version = "0.3.7", default-features = false, features = ["std", "sink"] }
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.8"
http = "0.2.7"
tokio-rustls = {version = "0.23.4", default-features = false, features = ["tls12"]}
hyper = {version = "0.14.18", features = ["full"]}
hyper-rustls = { version = "0.23", features = ["http2", "webpki-tokio"] }
hyper-proxy = { version = "0.9", default-features = false, features = ["rustls-webpki"] }
webpki-roots = "0.22"
rustls-pemfile = "1.0.0"


