[package]
name = "inn"
description = "A cross-platform packet capture tool similar to fiddler"
documentation = "https://docs.rs/inn"
repository = "https://github.com/black-mongo/inn"
homepage = "https://github.com/black-mongo/inn"
keywords = ["inn", "fiddler", "charles", "whistle"]
categories = ["plugins", "network-programming"]
readme = "README.md"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Cam"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network={path="../network"}
actix = "0.13"
actix-rt = "2.0.0"
env_logger = "0.9"
log = "0.4"
